# q-chem

./: .gitignore  docker-compose.yml  find_import.py  pyproject.toml  requirements.txt  schemas.py  test.py  test_graph.py
.github/workflows/: qchem-review.yml
agent/: __init__.py  graph.py  llm.py  registry.py  repl.py
agent/agent_tools/: __init__.py  debug.py  generate_config.py  parse_molecule.py  pubchem.py  run_pyscf.py  run_xtb.py  standardizer.py  tool_wrapper.py  validate_basis.py
config_generators/: __init__.py  orca_generator.py  psi4_generator.py  pyscf_generator.py  xtb_generator.py
converter/: __init__.py  basis_utils.py  qchem_converter.py
frontend/: __init__.py  app.py
tests/: conftest.py  generate_references.py  test_agent.py  test_agent_no_hallucination.py  test_converter_examples.py  test_converter_real.py  test_orca_parser.py  test_output_parser.py  test_pyscf_generator.py  test_run_calculation.py  test_run_pyscf.py  test_tools.py
