[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qchem-agent"
version = "0.1.0"
description = "AI agent for automating quantum chemistry calculations"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
# Vladimir — QM tools
qm = [
    "pyscf>=2.9",
    "geometric>=1.1",  # geometry-optimization engine used by pyscf.geomopt
    "ase>=3.23",
    "rdkit>=2024.3",
]

# Misha — parsing, visualisation, reports
viz = [
    "cclib>=1.8",
    "py3Dmol>=2.4",
    "matplotlib>=3.9",
    "jinja2>=3.1",
]

# Vlad — agent, API, frontend
agent = [
    "anthropic>=0.30",
    "langgraph>=0.2",
    "langchain>=0.3",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "typer>=0.12",
    "langsmith>=0.1",
    "langchain-openai>=0.2",
    "langfuse>=3",
]

# Ihsaan — database, async, training
data = [
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "chromadb>=0.6",
    "mlflow>=2.18",
]

# Frontend (Phase 4)
frontend = [
    "streamlit>=1.40",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

all = [
    "qchem-agent[qm,viz,agent,data,dev]",
]

[project.scripts]
qchem-agent = "cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "agent: end-to-end test that invokes the full LLM agent (slow, requires LLM access)",
    "slow: test that executes a real PySCF calculation (no network, but compute-heavy)",
]
